<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="108dp"
        android:layout_height="48dp"
        android:gravity="center"
        android:text="@string/name"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.145"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.302"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/total_Amount"
        android:layout_width="276dp"
        android:layout_height="75dp"
        android:gravity="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.167"
        tools:ignore="TextSizeCheck" />

    <EditText
        android:id="@+id/name_txt"
        android:layout_width="216dp"
        android:layout_height="48dp"
        android:autofillHints=""
        android:hint="@string/name"
        android:inputType="text"
        android:textColorHint="#8D6E63"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.856"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.306"
        tools:ignore="LabelFor,DuplicateSpeakableTextCheck" />

    <TextView
        android:layout_width="108dp"
        android:layout_height="48dp"
        android:gravity="center"
        android:inputType="text"
        android:text="@string/email_id"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.145"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.386"
        tools:ignore="TextViewEdits,TextSizeCheck,DuplicateSpeakableTextCheck" />

    <EditText
        android:id="@+id/email_txt"
        android:layout_width="216dp"
        android:layout_height="48dp"
        android:autofillHints=""
        android:hint="@string/email_id"
        android:inputType="textEmailAddress"
        android:textColorHint="#8D6E63"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.856"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.386"
        tools:ignore="LabelFor" />

    <TextView
        android:layout_width="108dp"
        android:layout_height="48dp"
        android:gravity="center"
        android:text="@string/phone"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.145"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.471"
        tools:ignore="TextSizeCheck" />

    <EditText
        android:id="@+id/phoneNo_txt"
        android:layout_width="216dp"
        android:layout_height="48dp"
        android:autofillHints=""
        android:hint="@string/phone"
        android:inputType="number"
        android:textColorHint="#8D6E63"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.856"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.471"
        tools:ignore="LabelFor,TextFields,DuplicateSpeakableTextCheck" />

    <TextView
        android:layout_width="108dp"
        android:layout_height="48dp"
        android:gravity="center"
        android:text="@string/adults"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.145"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.559"
        tools:ignore="TextSizeCheck" />

    <EditText
        android:id="@+id/No_of_Adults_txt"
        android:layout_width="216dp"
        android:layout_height="48dp"
        android:autofillHints=""
        android:hint="@string/number_of_adults"
        android:inputType="number"
        android:textColorHint="#8D6E63"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.856"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.559"
        tools:ignore="LabelFor,TextFields,DuplicateSpeakableTextCheck" />

    <ProgressBar
        android:id="@+id/progression_bar"
        android:layout_width="67dp"
        android:layout_height="65dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.762" />

    <TextView
        android:id="@+id/payment_txt"
        android:layout_width="280dp"
        android:layout_height="86dp"
        android:gravity="center"
        android:text=""
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.993" />

    <Button
        android:id="@+id/payment_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/payment"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.856" />

    <Button
        android:id="@+id/get_amt_btn"
        android:layout_width="334dp"
        android:layout_height="48dp"
        android:text="@string/get_amount"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.636"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.649"
        tools:ignore="VisualLintButtonSize" />

</androidx.constraintlayout.widget.ConstraintLayout>